syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.wso2.micro.integrator.grpc.proto";
option java_outer_classname = "MIProto";

package org.wso2.micro.integrator.grpc.proto;


service MIService {
  rpc dataExchange(stream DataRequest) returns (stream DataResponse){};
}

message DataResponse {
  enum ResponseType{
    SERVER = 0;
    APILIST = 1;
    API = 2;
    ENDPOINTLIST = 3;
    ENDPOINT = 4;
    CARBONAPPLIST = 5;
  }
  ResponseType responseType = 1;
  string response = 2;
}

message DataRequest {
  oneof requests{
    Handshake handshake = 1;
    ServerInfo serverInfo = 2;
    APIList apiList= 3;
    API api = 4;
    EndpointList endpointList = 5;
    Endpoint endpoint = 6;
    CarbonAppList carbonAppList = 7;
    CarbonApp carbonApp = 8;
    Error error = 9;
    Message message = 10;
  }
}

message Handshake{
  string groupID = 1;
  string nodeID = 2;
}

message APIList{
  int32 count = 1;
  repeated APISummary apiSummaries = 2;
}

message APISummary{
  string tracing = 1;
  string name = 2;
  string url = 3;
}

message API{
  string tracing = 1;
  string stats = 2;
  int32 port = 3;
  string configuration = 4;
  string name = 5;
  string context = 6;
  repeated Resource resources = 7;
  string version = 8;
  string url = 9;
  string host = 10;
}

message Resource{
  repeated string methods = 1;
  string url = 2;
}

message ServerInfo{
  string productVersion = 1;
  string osVersion = 2;
  string javaVersion = 3;
  string carbonHome = 4;
  string javaVendor = 5;
  string osName = 6;
  string productName = 7;
  string javaHome = 8;
}

message EndpointList{
  int32 count = 1;
  repeated EndpointSummary endPointSummaries = 2;
}

message EndpointSummary{
  string name = 1;
  string type = 2;
  bool  isActive = 3;
}

message Endpoint{
  string tracing = 1;
  string method = 2;
  string advanced = 3; //
  string timeoutState = 4; //
  string configuration = 5;
  string uriTemplate = 6;
  string name = 7;
  string type = 8;
  bool isActive = 9;
}

message Artifact{
  string name = 1;
  string type = 2;
}

message CarbonAppList{
  int32 totalCount = 1;
  int32 activeCount = 2;
  repeated CarbonApp activeList = 3;
  int32 faultyCount = 4;
  repeated CarbonApp faultyList = 5;
}

message CarbonApp{
  string name = 1;
  string version = 2;
  repeated Artifact artifacts = 3;
}

message Error{
  string message = 1;
}

message Message{
  string message = 1;
}